# Vplayer

./: .gitignore  BACKEND_EQ_PATCH.txt  CHANGELOG.md  PROJECT_FILES_OVERVIEW.md  Rewriteplan.md  clean-old-releases.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
src-tauri/: Cargo.toml  error_log.txt  error_log_2.txt  error_log_3.txt  error_log_4.txt  tauri.conf.json  test_output.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio.rs.backup  context_log.rs  database.rs  database_album_art.rs  database_failed_tracks.rs  database_folders.rs  database_playlist.rs  database_schema.rs  database_tracks.rs  effects.rs  error.rs  lib.rs  lyrics.rs  main.rs  playlist_io.rs  query_builder.rs  replaygain.rs  replaygain_store.rs  scanner.rs  smart_playlists.rs  tag_service.rs  time_utils.rs  validation.rs  visualizer.rs  watcher.rs
src-tauri/src/audio/: device.rs  effects.rs  mod.rs  playback_state.rs  preload.rs  visualizer.rs  volume_manager.rs
src-tauri/src/commands/: audio.rs  cache.rs  effects.rs  library.rs  library_maintenance.rs  library_scan.rs  library_tracks.rs  lyrics.rs  mod.rs  playlist.rs  replaygain.rs  smart_playlist.rs  tray.rs  visualizer.rs  watcher.rs
src-tauri/tests/: album_replaygain_integration.rs  database_playlist_integration.rs  library_filter_integration.rs  migration_boot_integration.rs  migration_steps_integration.rs  playlist_reorder_integration.rs  scanner_integration.rs  smart_playlist_integration.rs  tracks_pagination_integration.rs
(+252 files in other folders)
