[package]
name = "vplayer"
version = "0.8.5"
description = "A native desktop music player"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = { version = "0.21", features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
lofty = "0.18"
walkdir = "2"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-log = "2"
notify = "6"
anyhow = "1.0"
image = "0.25"
base64 = "0.22"
ebur128 = "0.1"
rustfft = "6.2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
